# RAGProbe

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  render.yaml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  events.py  logging_config.py  main.py  models.py
backend/app/core/: __init__.py  chunking.py  exam.py  groq_client.py  indexing.py  ingestion.py  judge.py  llm_client.py  retrieval.py  runner.py  scoring.py
backend/app/routes/: documents.py  health.py  reports.py  runs.py
backend/fixtures/sample_docs/: meridian-overview.md
backend/tests/: conftest.py  test_chunking.py  test_config.py  test_db.py  test_documents.py  test_exam_parsing.py  test_groq_client.py  test_health.py  test_indexing.py  test_ingestion.py  test_llm_client.py  test_reports.py  test_retrieval.py  test_runner.py  test_span_overlap.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/samples/: meridian-operations.md
frontend/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src/api/: .gitkeep  client.ts
frontend/src/components/: .gitkeep  ConfigEditor.tsx  ConfigProgress.tsx  DocumentRow.tsx  Dropzone.tsx  EventLog.tsx  FailureExplorer.tsx  Footer.tsx  LanguageToggle.tsx  Layout.tsx  Leaderboard.tsx  LiveProcess.tsx  PhaseTimeline.tsx  RecommendationBanner.tsx  ScoreBreakdownChart.tsx  Sidebar.tsx  StatCard.tsx  Switch.tsx  ThemeToggle.tsx
frontend/src/lib/: confidence.ts  configColors.ts  configs.ts  format.ts  i18n.tsx  leaderboard.ts  mockRun.ts  qtype.ts  session.ts
frontend/src/pages/: .gitkeep  History.tsx  Report.tsx  RunProgress.tsx  Upload.tsx
